# respk

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  circle.yml
.github/: main.workflow
cli/: Cargo.toml
cli/src/: main.rs
src/: compression.rs  error.rs  lib.rs  locale.rs  macros.rs  main.rs  package.rs  resource.rs  tests.rs
tests/: tests.rs
