[package]
name = "respk"
version = "0.1.2"
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
categories = ["games"]
description = "Manage resource files using a fast, custom open format designed especially for use in games."
documentation = "https://docs.rs/respk"
homepage = "https://github.com/sagebind/respk"
repository = "https://github.com/sagebind/respk"
readme = "README.md"
keywords = ["archive", "package", "resource", "asset"]
license = "MIT"
edition = "2018"

[dependencies]
lz4 = "1.23"

[dependencies.rusqlite]
version = "0.16"
features = ["blob", "bundled"]

[workspace]
members = ["cli"]
